--- a/SafeTrack.ipynb
+++ b/SafeTrack.ipynb
@@ -18,18 +18,13 @@
     "\n",
     "counter = 0\n",
     "frameno = 0\n",
+    "mx = 0\n",
     "\n",
     "model = tf.keras.models.load_model('model.h5')\n",
     "\n",
-    "DNN = \"TF\"\n",
-    "if DNN == \"CAFFE\":\n",
-    "    modelFile = \"assets/res10_300x300_ssd_iter_140000_fp16.caffemodel\"\n",
-    "    configFile = \"assets/deploy.prototxt\"\n",
-    "    net = cv2.dnn.readNetFromCaffe(configFile, modelFile)\n",
-    "else:\n",
-    "    modelFile = \"assets/opencv_face_detector_uint8.pb\"\n",
-    "    configFile = \"assets/opencv_face_detector.pbtxt\"\n",
-    "    net = cv2.dnn.readNetFromTensorflow(modelFile, configFile)\n",
+    "modelFile = \"assets/opencv_face_detector_uint8.pb\"\n",
+    "configFile = \"assets/opencv_face_detector.pbtxt\"\n",
+    "net = cv2.dnn.readNetFromTensorflow(modelFile, configFile)\n",
     "\n",
     "cap = cv2.VideoCapture(1)\n",
     "if not cap.isOpened():\n",
@@ -38,14 +33,21 @@
     "    raise IOError(\"Cannot open webcam\")\n",
     "\n",
     "pygame.mixer.init()\n",
-    "\n",
-    "audio_file = \"assets/audio1.mp3\"\n",
+    "audio_file = \"assets/alert.mp3\"\n",
     "sound = pygame.mixer.Sound(audio_file)\n",
     "\n",
-    "mx = 0\n",
+    "GREEN = (0, 165, 0)\n",
+    "ORANGE = (0, 212, 255)\n",
+    "RED = (0, 0, 255)\n",
+    "GRAY = (165, 165, 165)\n",
+    "PINK = (96, 27, 216)\n",
+    "CYAN = (154, 166, 38)\n",
+    "\n",
+    "FONT = cv2.FONT_HERSHEY_SIMPLEX\n",
     "\n",
     "for i in itertools.count():\n",
     "    frameno = frameno + 1\n",
+    "    print(frameno)\n",
     "\n",
     "    ret, frame = cap.read()\n",
     "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
@@ -69,7 +71,7 @@
     "            w = x2 - x1\n",
     "            h = y2 - y1\n",
     "\n",
-    "            cv2.rectangle(frame, (x1 - 20, y1 - 10), (x2 + 20, y2), (96, 27, 216), 2)\n",
+    "            cv2.rectangle(frame, (x1 - 20, y1 - 10), (x2 + 20, y2), PINK, 2)\n",
     "\n",
     "            roi_gray = gray[y:y + h, x:x + w]\n",
     "            roi_color = frame[y:y + h, x:x + w]\n",
@@ -84,51 +86,67 @@
     "            lw = w\n",
     "            lh = int(h / 4) + int(h / 4)\n",
     "\n",
-    "            cv2.rectangle(frame, (x + rx, y + ry), (x + rw - 10, y + rh), (154, 166, 38), 2)\n",
-    "            cv2.rectangle(frame, (x + lx + 10, y + ly), (x + lw, y + lh), (154, 166, 38), 2)\n",
+    "            cv2.rectangle(frame, (x + rx, y + ry), (x + rw - 10, y + rh), CYAN, 2)\n",
+    "            cv2.rectangle(frame, (x + lx + 10, y + ly), (x + lw, y + lh), CYAN, 2)\n",
     "\n",
     "            face_roi = frame[y1:y2, x1:x2]\n",
     "            r_eye_roi = frame[y + ry: y + rh, x + rx: x + rw]\n",
+    "            l_eye_roi = frame[y + ly: y + lh, x + lx: x + lw]\n",
     "\n",
     "            img_size = 64\n",
-    "            img_array = cv2.cvtColor(r_eye_roi, cv2.COLOR_BGR2GRAY)\n",
-    "            new_array = cv2.resize(img_array, (img_size, img_size))\n",
-    "            new_array = np.expand_dims(new_array, axis=-1)\n",
-    "            new_array = (np.array(new_array) - np.min(new_array)) / (np.max(new_array) - np.min(new_array))\n",
     "\n",
-    "            prediction = model.predict(np.expand_dims(new_array, 0))\n",
+    "            r_eye_array = cv2.cvtColor(r_eye_roi, cv2.COLOR_BGR2GRAY)\n",
+    "            r_eye_array = cv2.resize(r_eye_array, (img_size, img_size))\n",
+    "            r_eye_array = np.expand_dims(r_eye_array, axis=-1)\n",
+    "            r_eye_array = (np.array(r_eye_array) - np.min(r_eye_array)) / (np.max(r_eye_array) - np.min(r_eye_array))\n",
+    "\n",
+    "            l_eye_array = cv2.cvtColor(l_eye_roi, cv2.COLOR_BGR2GRAY)\n",
+    "            l_eye_array = cv2.resize(l_eye_array, (img_size, img_size))\n",
+    "            l_eye_array = np.expand_dims(l_eye_array, axis=-1)\n",
+    "            l_eye_array = (np.array(l_eye_array) - np.min(l_eye_array)) / (np.max(l_eye_array) - np.min(l_eye_array))\n",
+    "\n",
+    "            r_eye_prediction = model.predict(np.expand_dims(r_eye_array, 0))\n",
+    "            l_eye_prediction = model.predict(np.expand_dims(l_eye_array, 0))\n",
     "\n",
     "            x1, y1, w1, h1 = 0, 0, 20, 30\n",
-    "            if prediction >= 0.5:\n",
+    "\n",
+    "            if counter == 0:\n",
+    "                TEXT_COLOR = GREEN\n",
+    "            elif counter >= 15:\n",
+    "                TEXT_COLOR = RED\n",
+    "            else:\n",
+    "                TEXT_COLOR = ORANGE\n",
+    "\n",
+    "            if r_eye_prediction >= 0.5 or l_eye_prediction >= 0.5:\n",
     "                counter = 0\n",
-    "                cv2.putText(frame, \"Open Eyes\", (x1 + w1, y1 + h1 + 40), cv2.FONT_HERSHEY_SIMPLEX, 0.7,\n",
-    "                            (0, 165, 0), 2)\n",
+    "                cv2.putText(frame, \"Open Eyes\", (x1 + w1, y1 + h1), FONT, 0.7, TEXT_COLOR, 2)\n",
     "            else:\n",
     "                counter = counter + 1\n",
-    "                cv2.putText(frame, \"Closed Eyes\", (x1 + w1, y1 + h1 + 40), cv2.FONT_HERSHEY_SIMPLEX, 0.7,\n",
-    "                            (0, 212, 255), 2)\n",
+    "                cv2.putText(frame, \"Closed Eyes\", (x1 + w1, y1 + h1), FONT, 0.7, TEXT_COLOR, 2)\n",
     "\n",
     "            if counter >= 15 and not pygame.mixer.get_busy():\n",
-    "                cv2.putText(frame, \"Drowsy Alert!!\", (x1 + w1, y1 + h1 + 80), cv2.FONT_HERSHEY_SIMPLEX, 0.7, \n",
-    "                            (0, 0, 255), 2)\n",
+    "                cv2.putText(frame, \"Drowsy Alert!!\", (x1 + w1, y1 + h1 + 40), FONT, 0.7, TEXT_COLOR, 2)\n",
     "                sound.play()\n",
     "\n",
-    "            text = \"Counter: \" + str(counter)\n",
-    "            cv2.putText(frame, text, (x1 + w1, y1 + h1), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (165, 165, 165), 2)\n",
+    "            text = \"Drowsiness: \" + str(counter)\n",
+    "            text_size, _ = cv2.getTextSize(text, FONT, 0.7, 2)\n",
+    "            text_x = frameWidth - text_size[0] - 20\n",
+    "            text_y = y1 + h1\n",
+    "            cv2.putText(frame, text, (text_x, text_y), FONT, 0.7, TEXT_COLOR, 2)\n",
     "\n",
     "    elapsed_time = timeit.default_timer() - start_time\n",
     "    fps = int(1 / elapsed_time)\n",
     "    if fps > mx:\n",
     "        mx = fps\n",
     "\n",
-    "    cv2.putText(frame, \"FPS: \" + str(fps), (x1 + w1, y1 + h1 + 430), cv2.FONT_HERSHEY_SIMPLEX, 0.6, (165, 165, 165), 1)\n",
+    "    cv2.putText(frame, \"FPS: \" + str(fps), (x1 + w1, y1 + h1 + 430), FONT, 0.6, GRAY, 1)\n",
     "\n",
-    "    cv2.putText(frame, \"Max: \" + str(mx), (x1 + w1 + 100, y1 + h1 + 430), cv2.FONT_HERSHEY_SIMPLEX, 0.6, (165, 165, 165), 1)\n",
+    "    cv2.putText(frame, \"Max: \" + str(mx), (x1 + w1 + 100, y1 + h1 + 430), FONT, 0.6, GRAY, 1)\n",
     "\n",
     "    time_text = \"Time: {:.2f}\".format(timeit.default_timer() - start_time2)\n",
-    "    cv2.putText(frame, time_text, (x1 + w1 + 200, y1 + h1 + 430), cv2.FONT_HERSHEY_SIMPLEX, 0.6, (165, 165, 165), 1)\n",
+    "    cv2.putText(frame, time_text, (x1 + w1 + 200, y1 + h1 + 430), FONT, 0.6, GRAY, 1)\n",
     "\n",
-    "    cv2.imshow(\"Drowsiness Detection\", frame)\n",
+    "    cv2.imshow(\"SafeTrack\", frame)\n",
     "\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "        break\n",
